possible fix to ise

--- a/src/components/landing/Events.astro
+++ b/src/components/landing/Events.astro
@@ -8,7 +8,7 @@ const cards = [
   },
   {
     title: 'Placement',
-    image: 'placement',
+    image: 'placement_event',
   },
   {
     title: 'incrediaripoff',
