possible fix to ise

--- a/src/components/landing/Benifits.astro
+++ b/src/components/landing/Benifits.astro
@@ -22,11 +22,11 @@ const cards = [
     content: 'Innovations on display—turning ideas into wow!!!',
     image: 'projectexpo',
   },
-  {
-    title: 'Placement guidence',
-    content: 'From campus to corporate—let&#39;s nail our dream job, one step at a time!',
-    image: 'placement',
-  },
+  // {
+  //   title: 'Placement guidence',
+  //   content: 'From campus to corporate—let&#39;s nail our dream job, one step at a time!',
+  //   image: 'placement',
+  // },
 ];
 const images: { [index: string]: ImageMetadata } = {};
 await Astro.glob('/src/assets/images/Benifits/*.webp').then((files) => {
