feat: gallery pics

--- a/src/components/landing/Events.astro
+++ b/src/components/landing/Events.astro
@@ -3,36 +3,33 @@ import { Image } from 'astro:assets';
 
 const cards = [
   {
-    title: 'cultural',
-    image: 'cultural',
+    title: 'sherlocked',
+    image: 'sherlocked',
   },
   {
-    title: 'Placement',
-    image: 'placement_event',
+    title: 'techtaintment',
+    image: 'techtaintment',
   },
   {
-    title: 'incrediaripoff',
-    image: 'incrediaripoff',
+    title: 'freshers',
+    image: 'freshers',
+    
   },
   {
-    title: 'techevent',
-    image: 'techevent',
+    title: 'respawn',
+    image: 'respawn',
   },
   {
-    title: 'techtainment1',
-    image: 'techtainment1',
+    title: 'farewell',
+    image: 'farewell',
   },
   {
-    title: 'gallery',
-    image: 'gallery',
+    title: 'antakshari',
+    image: 'antakshari',
   },
   {
-    title: 'placementtalks2',
-    image: 'placementtalks2',
-  },
-  {
-    title: 'projectexpo',
-    image: 'projectexpo',
+    title: 'talenthunt',
+    image: 'talenthunt',
   },
 ];
 
