--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,7 +65,7 @@ let user = session?.user?.id ? await getUser(session.user.id) : null;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #1418234f;
+     background-color: rgba(20, 24, 35, 0.31);
     backdrop-filter: blur(50px);
     -webkit-backdrop-filter: blur(50px);
     z-index: -1;
