--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -41,6 +41,6 @@ const { title, description, image = "/favicon.png" } = Astro.props;
 <meta property="twitter:url" content="https://acenmamit.vercel.app/">
 <meta name="twitter:title" content={title}>
 <meta name="twitter:description" content={description}>
-<meta name="twitter:image" content="https://acenmamit.vercel.app/android-chrome-192x192.png"
+<meta name="twitter:image" content="https://acenmamit.vercel.app/android-chrome-192x192.png">
 
 
