--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -34,6 +34,7 @@ const { title, description, image = "/favicon.png" } = Astro.props;
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content="https://acenmamit.vercel.app/android-chrome-192x192.png" />
+<meta property="og:logo" content="https://acenmamit.vercel.app/favicon.png" />
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
