--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -66,7 +66,11 @@ let imagesDetails = await getImages('gallery');
 </style>
 
 <script>
-  const images = gsap.utils.toArray('.gallery-image') as HTMLImageElement[];
+  import gsap from 'gsap';
+  import ScrollTrigger from 'gsap/ScrollTrigger';
+  gsap.registerPlugin(ScrollTrigger);
+
+  const images = gsap.utils.toArray<HTMLImageElement>('.gallery-image');
 
   images.forEach((element) => {
     gsap.fromTo(
